narrow screens caused layer and search widgets to overlap, fixed as much as i can for now

--- a/app/css/mol.css
+++ b/app/css/mol.css
@@ -1,6 +1,7 @@
 html { height: 100% }
-body { height: 100%; margin: 0px; padding: 0px; overflow: auto; 
-       font-family: Arial, sans-serif; color: #141414; font-weight:700;}
+body { height: 100%; margin: 0px; padding: 0px; overflow: auto; min-width: 720px;
+       font-family: Arial, sans-serif; color: #141414; font-weight:700;
+       overflow-y: hidden}
 #map { height: 100% }
 #meta { height: 0% }
 
